--- a/vko8/index.html
+++ b/vko8/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Javascript Phaser App</title>
-    <script src="lib/phaser/build/phaser.js"></script>
+    <script src="node_modules/phaser/build/phaser.js"></script>
     <script src="node_modules/@orange-games/phaser-input/build/phaser-input.js"></script>
     <script src="game.js"></script>
 </head>
