--- a/ht/src/index.html
+++ b/ht/src/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <title>Pictur</title>
   <base href="/">
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <meta name="google-signin-client_id" content="1087314749986-a4m6fqbter0j8248kmapt6ghhrnar1h9.apps.googleusercontent.com">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
